moved ethereum code to service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
 
       <div class="col-2 p-3" >
             <app-rightbar></app-rightbar>
-            {{balance}}
+            {{_tes.balance}}
             <button (click)="payCoin(100)" class="btn btn-primary" type="button" name="button">Pagar 100 Metacoins</button>
             <button (click)="testBalance()" class="btn btn-success" type="button" name="button">Test balance</button>
 
