--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -3,7 +3,7 @@ h3{
 }
 
 .nav-link{
-  border: 1px solid rgb(230, 230, 230);
+  border: 1px solid rgba(255, 255, 255, 0);
   padding-top:5px;
   padding-bottom:5px;
   color: black;
@@ -13,12 +13,14 @@ h3{
 }
 
 .active{
+  border: 1px solid rgb(230, 230, 230);
   color: black !important;
   background-color: white !important;
   font-weight: bold;
 }
 
 .nav-link:hover{
+  border: 1px solid rgb(230, 230, 230);
   color: black !important;
   background-color: white !important;
 }
