added content list and unlock logic

--- a/src/app/components/content-detail/content-detail.component.html
+++ b/src/app/components/content-detail/content-detail.component.html
@@ -1,3 +1,7 @@
-<p>
-  content-detail works!
-</p>
+<div  class="modal fade bd-example-modal-lg" id="detailModal" tabindex="-1" >
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      ...
+    </div>
+  </div>
+</div>
