--- a/src/app/components/content-detail/content-detail.component.html
+++ b/src/app/components/content-detail/content-detail.component.html
@@ -1,7 +1,5 @@
-<div  class="modal fade bd-example-modal-lg" id="detailModal" tabindex="-1" >
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      ...
-    </div>
+<div class="container">
+  <div class="">
+    Hola
   </div>
 </div>
