--- a/src/app/components/content/content.component.css
+++ b/src/app/components/content/content.component.css
@@ -10,3 +10,16 @@
   font-size: 12px !important;
   line-height: 14px !important;
 }
+
+.bg-div{
+  background:linear-gradient(
+      rgba(0, 0, 0, 0.35),
+      rgba(0, 0, 0, 0.25)
+    ), url('../../../assets/book-cat-bg.jpg');
+  background-position: center;
+  color:white;
+  padding-top:40px;
+  padding-bottom:40px;
+  min-height: 120px;
+  margin-bottom:15px;
+}
