--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,9 +1,9 @@
-<div class="container-fluid bg-white" style="padding-left:50px;padding-top:50px;padding-bottom:50px;border-bottom:1px solid rgb(230, 230, 230);">
+<div *ngIf="!_db.user" class="container-fluid bg-white" style="padding-left:50px;padding-top:50px;padding-bottom:50px;border-bottom:1px solid rgb(230, 230, 230);">
   <div class="row">
     <div class="col-12">
       <h1 style="font-size:34px;">Access the best content from the internet</h1>
       <h4 class="mt-3" style="font-size:24px;font-weight:normal;">Find music, videos, photos, books and unlock them by inviting friends to join.</h4>
-      <button class="btn btn-success mt-3" type="submit">SIGN UP</button>
+      <button class="btn btn-success mt-3" (click)="openModal()" type="submit">SIGN UP</button>
 
     </div>
     <!-- <div class="col-lg-6">
