--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -47,7 +47,7 @@
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <button (click)="logout()"  class="btn btn-danger btn-sm" type="submit">Logout</button>
-              <button  class="btn btn-sm ml-3" type="submit">{{_db.user.displayName}}</button>
+              <button  class="btn btn-sm ml-3" type="submit">{{_db.user?.displayName}} <span class="badge badge-warning text-white ml-1"><i class="fa fa-key mr-1"></i>{{_db.userData?.theKeys}}</span></button>
               <img class="ml-3" [src]="_db.user.photoURL" width="50" alt="">
             </li>
 
