--- a/src/app/components/rightbar/rightbar.component.html
+++ b/src/app/components/rightbar/rightbar.component.html
@@ -1,3 +1,6 @@
 <div class="content-container border bg-white rounded p-3">
-  
+  <h6>Become a SL contributor</h6>
+  <hr>
+  <p>Being a contributor allows you to submit content and unlock exclusive content posted by other users.</p>
+  <button class="btn btn-block btn-success" type="button" name="button">LEARN MORE</button>
 </div>
