--- a/src/app/components/fslogin-modal/fslogin-modal.component.html
+++ b/src/app/components/fslogin-modal/fslogin-modal.component.html
@@ -1,24 +1,25 @@
 <div *ngIf="shown" id="myModal" class="modal">
-  <div class="container" style="margin-top:100px;">
+  <div class="container" style="margin-top:130px;">
     <div class="closeBtn">
       <button (click)="closeModal()" class="btn btn-danger" type="button" name="button"><i class="fa fa-close"></i></button>
     </div>
     <div class="row mt-3">
       <div class="col-12 text-center">
-        <img src="../../../assets/catLogin.png" width="200" alt="">
+        <img src="../../../assets/catLogin2.gif" width="200" alt="">
       </div>
     </div>
-    <div class="row mt-3">
-      <div class="col-3"></div>
-      <div class="col-6 text-center">
+    <div *ngIf="!logging" class="row mt-3">
+      <div class="col-sm-3 d-none d-sm-block"></div>
+      <div class="col-12 col-sm-6 text-center">
         <h1>Join the community</h1>
         <h5>SocialLock is a community where you can access content by shring it with friends.</h5>
       </div>
-      <div class="col-3"></div>
+      <div class="col-sm-3 d-none d-sm-block"></div>
     </div>
     <div class="row mt-3">
       <div class="col-12 text-center">
-        <button (click)="login()" type="button" class="btn btn-success">Login With Twitter</button>
+        <button *ngIf="!logging" (click)="login()" type="button" class="btn" style="background-color:#00b4f5; color:white; font-size:12px; font-weight:bold;"><i class="fa fa-twitter mr-2" style="font-size:18px;vertical-align:middle;"></i><span style="vertical-align:middle;">LOGIN WITH TWITTER</span></button>
+        <h5 *ngIf="logging">Signing in...</h5>
       </div>
     </div>
   </div>
