--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,14 +1,13 @@
-<div *ngIf="!_db.user" class="container-fluid bg-white" style="padding-left:50px;padding-top:50px;padding-bottom:50px;border-bottom:1px solid rgb(230, 230, 230);">
+<div *ngIf="!_db.user" class="container-fluid bg-white" style="border-bottom:1px solid rgb(230, 230, 230);">
   <div class="row">
-    <div class="col-12">
+    <div class="col-sm-6 order-2 order-sm-1" style="padding-top:50px;padding-bottom:50px;padding-left:50px;padding-right:50px;">
       <h1 style="font-size:34px;">Access the best content from the internet</h1>
       <h4 class="mt-3" style="font-size:24px;font-weight:normal;">Find music, videos, photos, books and unlock them by inviting friends to join.</h4>
       <button class="btn btn-success mt-3" (click)="openModal()" type="submit">SIGN UP</button>
-
     </div>
-    <!-- <div class="col-lg-6">
-
-    </div> -->
+    <div class="col-sm-6 order-1 order-sm-2 text-center align-self-center">
+      <img src="../../assets/cat-header.jpg" class="img-fluid" width="300" alt="">
+    </div>
   </div>
 </div>
 <div class="container" id="myContainer">
