--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,14 +5,19 @@
     <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse">
         <span class="navbar-toggler-icon"></span>
     </button> -->
-    <div class="navbar-collapse collapse">
+    <div class="d-none d-lg-block">
       <a class="navbar-brand mr-3" href="#">
         <img src="../../assets/logo.svg" width="30" class="d-inline-block align-top" alt="">
         Social<strong>Lock</strong>
       </a>
     </div>
+    <div class="d-none d-sm-block d-lg-none">
+      <a class="navbar-brand mr-3" href="#">
+        <img src="../../assets/logo.svg" width="30" class="d-inline-block align-top" alt="">
+      </a>
+    </div>
     <form class="form-inline navbar-collapse">
-      <div class="input-group">
+      <div class="input-group w-100">
         <span class="input-group-addon bg-white search-input-p" id="basic-addon1"><i class="fa fa-search fw"></i></span>
         <input type="text" class="form-control form-control-sm border-left-0" placeholder="Discover awesome content...">
       </div>
@@ -36,7 +41,7 @@
     <div *ngIf="_db.user" class="navbar-collapse text-center mt-2 mt-sm-0">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <button class=" btn btn-sm btn-success" type="button">SUBMIT CONTENT</button>
+              <button [routerLink]="['/new']" class=" btn btn-sm btn-success" type="button">SUBMIT CONTENT</button>
               <!-- <button  class="btn btn-sm ml-3" type="submit">{{_db.user?.displayName}} <span class="badge badge-warning text-white ml-1"><i class="fa fa-key mr-1"></i>{{_db.userData?.theKeys}}</span></button> -->
               <div class="dropdown d-inline">
                 <a data-toggle="dropdown" data-offset=30><img class="ml-3 rounded-circle" [src]="_db.user.photoURL" width="50" alt=""></a>
