route guard, lazy loading content

--- a/src/app/components/content-detail/content-detail.component.html
+++ b/src/app/components/content-detail/content-detail.component.html
@@ -1,5 +1,18 @@
-<div class="container">
-  <div class="">
-    Hola
+<div class="container" id="myContainer">
+  <div class="row no-gutters">
+    <div class="col-12 pt-3 col-lg-9">
+      <div class="content-container border bg-white rounded p-3">
+      </div>
+    </div>
+
+    <div class="col-3 pt-3 d-none d-lg-block col-xl-3" >
+      <div class="sidebar content-container border bg-white rounded p-3">
+        <h6>Share your own content</h6>
+        <hr>
+        <p>Tips for submitting great content</p>
+        <button class="btn btn-block btn-success" type="button" name="button">LEARN MORE</button>
+      </div>
+    </div>
+
   </div>
 </div>
